# project

./: .gitignore  README.md  docker-compose.yaml
client/: Dockerfile  README.md  package-lock.json  package.json
client/src/: App.js  index.css  index.js
client/src/Components/: Forecast.js  Graph.js  Matrix.js  MatrixTables.js  Navbar.js  TableAverageRate.js
client/src/services/: DataApi.js
kloudkit/: .env  package-lock.json  package.json
kloudkit/src/: App.js  DataApi.js  Graph.js  NavBar.js  Table.js
server/: .env  .env.sample  Dockerfile  README.md  index.js  package-lock.json  package.json  pyproject.toml  requirements.txt  table.html
server/config/: configDB.js
server/controllers/: order.js  product.js  user.js
server/middelwares/: authorized.js  catchErorrs.js
server/mudels/: order.js  product.js  user.js
server/routes/: order.js  product.js  user.js
server/src/: cache.py  const.py  db.py  db_function.py  server.py
server/src/dalar_rate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/test/: test_db_function.py  test_mongo.py  test_server.py
shop/: package-lock.json  package.json
shop/src/: App.js  HomePage.js  NavBar.js  flags.css  index.js
shop/src/app/: store.js
נסיונות/afterbb/client/: package-lock.json  package.json
נסיונות/afterbb/server/: Dockerfile  requirements.txt
נסיונות/client/: Dockerfile  README.md  package-lock.json  package.json
נסיונות/client/src/: App.js  App.test.js  index.css
נסיונות/start/: docker-compose.yaml
נסיונות/trial/: cache.json  data.json  docker-compose.yaml
(+50 files in other folders)
